--- a/app/src/main/res/layout/item_operate_install_listview.xml
+++ b/app/src/main/res/layout/item_operate_install_listview.xml
@@ -23,6 +23,7 @@
             android:layout_marginEnd="@dimen/dp_16"
             android:layout_marginRight="@dimen/dp_16"
             android:layout_marginTop="@dimen/dp_16"
+            android:enabled="false"
             android:background="@drawable/bg_button_clickable"
             android:paddingBottom="@dimen/dp_8"
             android:paddingLeft="@dimen/dp_16"
