--- a/app/src/main/res/layout/item_handing.xml
+++ b/app/src/main/res/layout/item_handing.xml
@@ -178,6 +178,7 @@
         android:orientation="horizontal">
 
         <LinearLayout
+            android:id="@+id/ll_item_handing_call"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
