订单任务和进行中页面中item显示迟到

--- a/app/src/main/res/layout/item_pending.xml
+++ b/app/src/main/res/layout/item_pending.xml
@@ -271,10 +271,11 @@
     </LinearLayout>
 
     <TextView
-        android:id="@+id/tv_item_pending_modify"
+        android:id="@+id/tv_item_pending_red"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignTop="@+id/tv_item_pending_time"
+        android:layout_marginStart="@dimen/dp_8"
         android:layout_marginLeft="@dimen/dp_8"
         android:layout_toEndOf="@+id/tv_item_pending_time"
         android:layout_toRightOf="@+id/tv_item_pending_time"
