--- a/app/src/main/res/layout/item_order.xml
+++ b/app/src/main/res/layout/item_order.xml
@@ -246,7 +246,7 @@
     </LinearLayout>
 
     <TextView
-        android:id="@+id/tv_item_order_modify"
+        android:id="@+id/tv_item_order_red"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignTop="@+id/tv_item_order_time"
