--- a/app/src/main/res/layout/item_remove.xml
+++ b/app/src/main/res/layout/item_remove.xml
@@ -13,6 +13,7 @@
         android:src="@drawable/ic_item_car"/>
 
     <ImageView
+        android:id="@+id/iv_item_remove_go"
         android:layout_width="@dimen/dp_48"
         android:layout_height="@dimen/dp_32"
         android:layout_gravity="top|end"
@@ -20,6 +21,20 @@
         android:layout_marginRight="@dimen/dp_16"
         android:layout_marginTop="@dimen/dp_16"
         android:src="@drawable/ic_item_go"/>
+
+    <TextView
+        android:id="@+id/tv_item_remove_go"
+        android:layout_width="wrap_content"
+        android:layout_height="@dimen/dp_32"
+        android:gravity="center"
+        android:layout_gravity="top|end"
+        android:layout_marginEnd="@dimen/dp_16"
+        android:layout_marginRight="@dimen/dp_16"
+        android:layout_marginTop="@dimen/dp_16"
+        android:textColor="@color/colorWhite"
+        android:textSize="@dimen/sp_20"
+        android:visibility="gone"
+        android:text="完成"/>
 
     <RelativeLayout
         android:layout_width="match_parent"
