--- a/app/src/main/res/layout/dialog_button_editable.xml
+++ b/app/src/main/res/layout/dialog_button_editable.xml
@@ -22,7 +22,7 @@
         android:layout_width="match_parent"
         android:layout_height="@dimen/dp_72"
         android:gravity="center"
-        android:text="设备未全部安装，仍然提交？"/>
+        android:text="@string/msg_part_complete"/>
 
     <LinearLayout
         android:layout_width="match_parent"
