--- a/app/src/main/res/layout/activity_test.xml
+++ b/app/src/main/res/layout/activity_test.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context="com.tianyigps.dispatch2.activity.TestActivity">
 
     <ImageView
@@ -13,4 +14,9 @@
         android:layout_height="@dimen/dp_64"
         android:background="@color/colorGray"/>
 
-</android.support.constraint.ConstraintLayout>
+    <EditText
+        android:id="@+id/et_activity_test"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
+
+</LinearLayout>
