--- a/app/src/main/res/layout/activity_test.xml
+++ b/app/src/main/res/layout/activity_test.xml
@@ -6,6 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:id="@+id/ll_activity_test"
     tools:context="com.tianyigps.dispatch2.activity.TestActivity">
 
     <ImageView
@@ -16,6 +17,11 @@
 
     <EditText
         android:id="@+id/et_activity_test"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
+
+    <EditText
+        android:id="@+id/et_activity_test_2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
 
