订单详情选择年份区间

--- a/app/src/main/res/layout/layout_activity_installing_next.xml
+++ b/app/src/main/res/layout/layout_activity_installing_next.xml
@@ -14,7 +14,7 @@
         android:background="@drawable/bg_flush"
         android:paddingLeft="@dimen/dp_72"
         android:paddingRight="@dimen/dp_72"
-        android:text="@string/next_step"
+        android:text="@string/submit_order"
         android:textColor="@color/colorWhite"/>
 
 </LinearLayout>
