--- a/app/src/main/res/layout/fragment_pending.xml
+++ b/app/src/main/res/layout/fragment_pending.xml
@@ -63,6 +63,16 @@
                     android:textSize="@dimen/sp_16"/>
             </LinearLayout>
 
+            <TextView
+                android:id="@+id/tv_fragment_pending_default"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:gravity="center"
+                android:text="@string/msg_search_null"
+                android:textColor="@color/colorWhite"
+                android:textSize="@dimen/sp_16"
+                android:visibility="gone"/>
+
         </FrameLayout>
 
     </android.support.v4.widget.SwipeRefreshLayout>
