质量统计无数据显示

--- a/app/src/main/res/layout/activity_statistics.xml
+++ b/app/src/main/res/layout/activity_statistics.xml
@@ -106,7 +106,7 @@
                     android:divider="@color/colorNull"
                     android:scrollbars="none"/>
 
-                <include layout="@layout/layout_default"/>
+                <include layout="@layout/layout_default_statistics"/>
 
             </FrameLayout>
 
