--- a/app/src/main/res/layout/dialog_message_order_cancel.xml
+++ b/app/src/main/res/layout/dialog_message_order_cancel.xml
@@ -9,7 +9,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/dp_8"
-        android:text="@string/return_order"/>
+        android:text="@string/tip"/>
 
     <View
         android:layout_width="wrap_content"
@@ -21,7 +21,7 @@
         android:layout_width="match_parent"
         android:layout_height="@dimen/dp_72"
         android:gravity="center"
-        android:text="订单已被取消！"/>
+        android:text="退单成功！"/>
 
     <Button
         android:id="@+id/tv_dialog_message_order_cancel"
@@ -33,7 +33,7 @@
         android:background="@drawable/bg_button"
         android:paddingLeft="@dimen/dp_64"
         android:paddingRight="@dimen/dp_64"
-        android:text="@string/known"
+        android:text="@string/ensure"
         android:textColor="@color/colorWhite"/>
 
 </LinearLayout>
