--- a/app/src/main/res/layout/activity_statistics.xml
+++ b/app/src/main/res/layout/activity_statistics.xml
@@ -80,9 +80,10 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="0dp"
             android:layout_marginLeft="@dimen/dp_16"
             android:layout_marginRight="@dimen/dp_16"
+            android:layout_weight="1"
             android:background="@drawable/bg_statistics_list"
             android:elevation="@dimen/dp_16"
             android:orientation="vertical"
@@ -113,6 +114,38 @@
 
         </LinearLayout>
 
+        <LinearLayout
+            android:id="@+id/ll_activity_statistics_count"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom"
+            android:background="@color/colorBlueTheme"
+            android:orientation="horizontal">
+
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="@dimen/dp_48"
+                android:layout_marginLeft="@dimen/dp_16"
+                android:layout_marginStart="@dimen/dp_16"
+                android:layout_weight="1"
+                android:gravity="center|start"
+                android:text="总量："
+                android:textColor="@color/colorWhite"
+                android:textSize="@dimen/sp_16"/>
+
+            <TextView
+                android:id="@+id/tv_activity_statistics_count"
+                android:layout_width="wrap_content"
+                android:layout_height="@dimen/dp_48"
+                android:layout_marginEnd="@dimen/dp_16"
+                android:layout_marginRight="@dimen/dp_16"
+                android:gravity="center|end"
+                android:text=""
+                android:textColor="@color/colorWhite"
+                android:textSize="@dimen/sp_16"/>
+
+        </LinearLayout>
     </LinearLayout>
+
 
 </FrameLayout>
