--- a/app/src/main/res/layout/activity_installing.xml
+++ b/app/src/main/res/layout/activity_installing.xml
@@ -11,18 +11,39 @@
     <android.support.v4.widget.SwipeRefreshLayout
         android:id="@+id/srl_activity_installing"
         android:layout_width="match_parent"
-        android:layout_marginLeft="@dimen/dp_8"
-        android:layout_marginRight="@dimen/dp_8"
         android:layout_height="wrap_content">
 
-        <ListView
-            android:id="@+id/lv_activity_installing"
+        <ScrollView
             android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1"
-            android:divider="@color/colorNull"
-            android:dividerHeight="@dimen/dp_16"
-            android:scrollbars="none"/>
+            android:layout_height="match_parent">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+
+            <include layout="@layout/layout_activity_installing_remarks"/>
+
+            <com.tianyigps.dispatch2.customview.MyListView
+                android:id="@+id/lv_activity_installing"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="1"
+                android:layout_marginTop="@dimen/dp_16"
+                android:layout_marginLeft="@dimen/dp_8"
+                android:layout_marginRight="@dimen/dp_8"
+                android:divider="@color/colorNull"
+                android:dividerHeight="@dimen/dp_16"
+                android:scrollbars="none"/>
+
+            <include layout="@layout/layout_activity_installing_next"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/dp_16"
+                android:layout_marginBottom="@dimen/dp_16"/>
+
+        </LinearLayout>
+
+        </ScrollView>
     </android.support.v4.widget.SwipeRefreshLayout>
 
 </LinearLayout>
