--- a/app/src/main/res/layout/layout_activity_installing_remarks.xml
+++ b/app/src/main/res/layout/layout_activity_installing_remarks.xml
@@ -1,12 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:layout_width="match_parent"
-              android:layout_height="wrap_content"
+              android:layout_height="wrap_content">
+
+    <LinearLayout
+        android:layout_height="wrap_content"
               android:background="@drawable/bg_item"
-              android:layout_marginTop="@dimen/dp_16"
-              android:elevation="@dimen/dp_2"
+              android:layout_margin="@dimen/dp_8"
               android:id="@+id/ll_layout_activity_installing_remarkds"
-              android:orientation="vertical">
+        android:layout_width="match_parent"
+              android:elevation="@dimen/dp_4"
+        android:orientation="vertical">
+
 
     <TextView
         android:layout_width="match_parent"
@@ -22,5 +27,6 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/dp_8"
         android:gravity="center"/>
+    </LinearLayout>
 
-</LinearLayout>
+</FrameLayout>
