OperateRepair无线设备时，没有接线图

--- a/app/src/main/res/layout/activity_operate_repair.xml
+++ b/app/src/main/res/layout/activity_operate_repair.xml
@@ -123,6 +123,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
+            android:visibility="gone"
             android:layout_alignParentStart="true"
             android:layout_below="@+id/iv_activity_operate_default_position"
             android:layout_marginTop="@dimen/dp_16">
