--- a/app/src/main/res/layout/activity_choice_worker.xml
+++ b/app/src/main/res/layout/activity_choice_worker.xml
@@ -65,8 +65,11 @@
             android:layout_centerHorizontal="true"
             android:layout_centerVertical="true"
             android:background="@null"
-            android:gravity="center"
             android:hint="工号/姓名/分管区域"
+            android:paddingLeft="@dimen/dp_8"
+            android:paddingStart="@dimen/dp_8"
+            android:paddingEnd="@dimen/dp_1"
+            android:paddingRight="@dimen/dp_1"
             android:lines="1"
             android:textSize="@dimen/sp_16"/>
 
