--- a/app/src/main/res/layout/item_operate_install_listview.xml
+++ b/app/src/main/res/layout/item_operate_install_listview.xml
@@ -110,6 +110,8 @@
                 android:layout_toRightOf="@+id/iv_item_operate_install_new"
                 android:background="@null"
                 android:hint="请输入设备号（至少6位）"
+                android:ellipsize="end"
+                android:singleLine="true"
                 android:lines="1"
                 android:maxWidth="@dimen/dp_240"
                 android:textSize="@dimen/sp_14"/>
@@ -175,7 +177,7 @@
 
         <EditText
             android:id="@+id/et_item_operate_install_position"
-            android:layout_width="match_parent"
+            android:layout_width="@dimen/dp_240"
             android:layout_height="wrap_content"
             android:layout_alignBottom="@+id/iv_item_operate_install_position"
             android:layout_marginEnd="@dimen/dp_80"
@@ -184,8 +186,8 @@
             android:layout_toRightOf="@+id/iv_item_operate_install_position"
             android:background="@null"
             android:hint="@string/enter_install_place"
-            android:lines="1"
-            android:maxWidth="@dimen/dp_240"
+            android:ellipsize="end"
+            android:singleLine="true"
             android:textSize="@dimen/sp_14">
             <!--<requestFocus/>-->
         </EditText>
