--- a/app/src/main/res/layout/layout_activity_operate_install_head.xml
+++ b/app/src/main/res/layout/layout_activity_operate_install_head.xml
@@ -49,10 +49,12 @@
                 android:layout_toEndOf="@+id/iv_layout_operate_install_car_no"
                 android:layout_toRightOf="@+id/iv_layout_operate_install_car_no"
                 android:background="@null"
+                android:ellipsize="end"
                 android:hint="@string/enter_car_no"
-                android:textColor="@color/colorText"
                 android:lines="1"
                 android:maxWidth="@dimen/dp_240"
+                android:singleLine="true"
+                android:textColor="@color/colorText"
                 android:textSize="@dimen/sp_14"/>
         </RelativeLayout>
 
@@ -223,9 +225,11 @@
             android:layout_toEndOf="@+id/iv_layout_operate_install_car_type"
             android:layout_toRightOf="@+id/iv_layout_operate_install_car_type"
             android:background="@null"
-            android:textColor="@color/colorText"
             android:hint="@string/car_type"
             android:lines="1"
+            android:ellipsize="end"
+            android:singleLine="true"
+            android:textColor="@color/colorText"
             android:textSize="@dimen/sp_14"/>
 
         <TextView
