--- a/app/src/main/res/layout/layout_title_base.xml
+++ b/app/src/main/res/layout/layout_title_base.xml
@@ -19,7 +19,7 @@
 
         <TextView
             android:id="@+id/tv_layout_title_base_middle"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="@dimen/dp_40"
             android:layout_centerHorizontal="true"
             android:layout_centerVertical="true"
