--- a/app/src/main/res/layout/item_pending.xml
+++ b/app/src/main/res/layout/item_pending.xml
@@ -439,7 +439,7 @@
     </LinearLayout>
 
     <TextView
-        android:id="@+id/tv_item_pending_red"
+        android:id="@+id/tv_item_pending_modify"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignTop="@+id/tv_item_pending_time"
@@ -448,6 +448,18 @@
         android:layout_toEndOf="@+id/tv_item_pending_time"
         android:layout_toRightOf="@+id/tv_item_pending_time"
         android:text="@string/modify"
+        android:visibility="gone"/>
+
+    <TextView
+        android:id="@+id/tv_item_pending_red"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignTop="@+id/tv_item_pending_modify"
+        android:layout_marginLeft="@dimen/dp_8"
+        android:layout_marginStart="@dimen/dp_8"
+        android:layout_toEndOf="@+id/tv_item_pending_modify"
+        android:layout_toRightOf="@+id/tv_item_pending_modify"
+        android:text="(改约不通过)"
         android:textColor="@color/colorRed"
         android:visibility="gone"/>
 
