Bug 811 OperateInstall 多设备时填写第一个imei号时，会自动跳到最后一个item

--- a/app/src/main/res/layout/item_operate_install_listview.xml
+++ b/app/src/main/res/layout/item_operate_install_listview.xml
@@ -192,7 +192,7 @@
             android:hint="@string/enter_install_place"
             android:singleLine="true"
             android:textSize="@dimen/sp_14">
-            <requestFocus/>
+            <!--<requestFocus/>-->
         </EditText>
 
         <ImageView
